--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@ body * {
   animation: slide-back 0.2s;
 }
 
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
+  cursor: pointer;
+}
+
 #switch span {
   display: block;
 
